force-app/main/default/objects/Skill_Group__c/Skill_Group__c.object-meta.xml
<CustomObject>
    <label>Skill Group</label>
    <nameField>
        <label>Skill Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Skill Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>