force-app/main/default/objects/Skill_Group__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <required>true</required>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Capwell</fullName>
                <default>true</default>
                <label>Capwell</label>
            </value>
            <value>
                <fullName>Experts4Office</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>