force-app/main/default/objects/Skill_Group__c/fields/opaId__c.field-meta.xml
<CustomField>
    <fullName>opaId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>opaId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>