force-app/main/default/objects/Skill_Group__c/fields/Parent_OpaId__c.field-meta.xml
<CustomField>
    <fullName>Parent_OpaId__c</fullName>
    <externalId>true</externalId>
    <label>Parent OpaId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>