force-app/main/default/objects/Skill_Group__c/fields/ParentGroup__c.field-meta.xml
<CustomField>
    <fullName>ParentGroup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Group</label>
    <referenceTo>Skill_Group__c</referenceTo>
    <relationshipLabel>Skill Groups</relationshipLabel>
    <relationshipName>Skill_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>