force-app/main/default/objects/Skill_Group__c/fields/Plural_Name__c.field-meta.xml
<CustomField>
    <fullName>Plural_Name__c</fullName>
    <label>Plural Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>