force-app/main/default/objects/Skill_Group__c/fields/ShowOnRadar__c.field-meta.xml
<CustomField>
    <fullName>ShowOnRadar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show On Radar</label>
    <type>Checkbox</type>
</CustomField>