force-app/main/default/objects/Skill_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Function__c</columns>
    <columns>Plural_Name__c</columns>
    <columns>ParentGroup__c</columns>
    <columns>Parent_OpaId__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>opaId__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>