force-app/main/default/objects/Skill_Group__c/listViews/Area_List.listView-meta.xml
<ListView>
    <fullName>Area_List</fullName>
    <columns>NAME</columns>
    <columns>Function__c</columns>
    <columns>Plural_Name__c</columns>
    <columns>ParentGroup__c</columns>
    <columns>Market__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Area</value>
    </filters>
    <label>Area List</label>
</ListView>